--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,20 @@
-name: Example Workflow
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      # Other job steps (e.g., build, tests)
-      
-      - name: Send Discord notification
-        if: always() # Send notification even if the job fails
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-            -d '{"content": "GitHub Actions run completed!"}' \
-            ${{ secrets.DISCORD_WEBHOOK_URL }}
+- name: Send custom Discord notification
+  if: always()
+  run: |
+    curl -X POST -H "Content-Type: application/json" \
+      -d '{
+        "username": "GitHub Actions",
+        "embeds": [{
+          "title": "Build Status",
+          "description": "The GitHub Actions workflow has completed.",
+          "color": 7506394,
+          "fields": [
+            {
+              "name": "Status",
+              "value": "Success",
+              "inline": true
+            }
+          ]
+        }]
+      }' \
+      ${{ secrets.DISCORD_WEBHOOK_URL }}
