--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Send Discord notification
         run: |
@@ -22,7 +24,7 @@ jobs:
               "avatar_url": "https://avatars.githubusercontent.com/u/9919?s=200&v=4",
               "embeds": [
                 {
-                  "title": "Build Status Notification",
+                  "title": "${{ github.event.head_commit.message }}",  # Commit message as the title
                   "description": "The GitHub Actions workflow has completed successfully.",
                   "color": 3447003,
                   "fields": [
